--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,7 @@ xcode_scheme: ThaiTechEventsCalendarTests
 before_install:
   - bundle install
   - pod repo update
+script:
+  - xcodebuild test -workspace ThaiTechEventsCalendar.xcworkspace -scheme ThaiTechEventsCalendarTests CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -destination 'platform=iOS Simulator,name=iPhone 7'
 after_success:
   - bash <(curl -s https://codecov.io/bash)
