Fix Travis-CI (#8)
:green_heart: Fixed swiftlint should ignore vendor/fastlane

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,7 @@ xcode_scheme: ThaiTechEventsCalendarTests
 before_install:
   - bundle install
   - pod repo update
+script:
+  - ./run_tests.sh
 after_success:
   - bash <(curl -s https://codecov.io/bash)
