--- a/ThaiTechEventsCalendar.xcodeproj/xcshareddata/xcschemes/ThaiTechEventsCalendarTests.xcscheme
+++ b/ThaiTechEventsCalendar.xcodeproj/xcshareddata/xcschemes/ThaiTechEventsCalendarTests.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0930"
-   version = "1.3">
+   LastUpgradeVersion = "0920"
+   version = "1.8">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -84,7 +84,7 @@
             buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "3FCBB319EEF6176C121628AA4A2047CE"
+               BlueprintIdentifier = "06376472274AEDB4573BA5F59A5A3DBF"
                BuildableName = "Pods_ThaiTechEventsCalendar.framework"
                BlueprintName = "Pods-ThaiTechEventsCalendar"
                ReferencedContainer = "container:Pods/Pods.xcodeproj">
@@ -126,7 +126,7 @@
             buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "ABD84594EAF56DDE85A6FE615DC8F3DA"
+               BlueprintIdentifier = "6B01103B830446CB04F706C192950E63"
                BuildableName = "Realm.framework"
                BlueprintName = "Realm"
                ReferencedContainer = "container:Pods/Pods.xcodeproj">
@@ -140,7 +140,7 @@
             buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "CD8E66BE66A6D8E9B02EE5E076B37B49"
+               BlueprintIdentifier = "48C78B0E25BD60BA0E3C01B39AD6E178"
                BuildableName = "RealmSwift.framework"
                BlueprintName = "RealmSwift"
                ReferencedContainer = "container:Pods/Pods.xcodeproj">
@@ -168,7 +168,7 @@
             buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "48B5EF6C8318EBEFC1C42923A0C450C4"
+               BlueprintIdentifier = "08684DFF4615FA08858896ABE4916E08"
                BuildableName = "Tabman.framework"
                BlueprintName = "Tabman"
                ReferencedContainer = "container:Pods/Pods.xcodeproj">
@@ -182,9 +182,23 @@
             buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "918DEDC4A6CEE0DE0B591A4915CA745E"
+               BlueprintIdentifier = "AA42C4706C252B18C61A40D1EEE44C95"
                BuildableName = "TagListView.framework"
                BlueprintName = "TagListView"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "NO"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "B1B0738501507B4084D184F107B3F50A"
+               BuildableName = "markymark.framework"
+               BlueprintName = "markymark"
                ReferencedContainer = "container:Pods/Pods.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -194,18 +208,10 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
+      shouldUseLaunchSchemeArgsEnv = "YES"
       codeCoverageEnabled = "YES"
-      onlyGenerateCoverageForSpecifiedTargets = "YES"
-      shouldUseLaunchSchemeArgsEnv = "YES">
-      <CodeCoverageTargets>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "9FFAF9D220410337000A99FE"
-            BuildableName = "ThaiTechEventsCalendar.app"
-            BlueprintName = "ThaiTechEventsCalendar"
-            ReferencedContainer = "container:ThaiTechEventsCalendar.xcodeproj">
-         </BuildableReference>
-      </CodeCoverageTargets>
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
@@ -228,22 +234,23 @@
             </BuildableReference>
          </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "88E9EC28B8B46C3631E6B242B50F4442"
-            BuildableName = "Alamofire.framework"
-            BlueprintName = "Alamofire"
-            ReferencedContainer = "container:Pods/Pods.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "9FFAF9D220410337000A99FE"
+            BuildableName = "ThaiTechEventsCalendar.app"
+            BlueprintName = "ThaiTechEventsCalendar"
+            ReferencedContainer = "container:ThaiTechEventsCalendar.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
