--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ language: swift
 osx_image: xcode9.2
 xcode_workspace: ThaiTechEventsCalendar.xcworkspace
 xcode_scheme: ThaiTechEventsCalendarTests
+cache:
+  - bundler
+  - cocoapods
 before_install:
   - bundle install
   - pod repo update
