--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,7 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
+*.cer
+*.mobileprovision
+*.certSigningRequest
+*.p12
