--- a/ThaiTechEventsCalendar/Info.plist
+++ b/ThaiTechEventsCalendar/Info.plist
@@ -36,6 +36,17 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.octto.ThaiTechEventsCalendar</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>ttevent</string>
+			</array>
+		</dict>
+	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
